--- a/practice.html
+++ b/practice.html
@@ -31,7 +31,7 @@
                             <li class="nav-item ">
                                 <a class="nav-link " href="# ">TESTIMONIALS</a>
                             </li>
-
+                            Pawan
                             <li class="nav-item ">
                                 <a class="nav-link " href="# ">CONTACT US</a>
                             </li>
